app/assets/sass/application.scss
//
// For guidance on how to add CSS and SCSS see:
// https://prototype-kit.service.gov.uk/docs/adding-css-javascript-and-images
//

@import "components/autocomplete";
@import "components/buttons";
@import "components/cards";
@import "components/filter";
@import "components/footer";
@import "components/header";
@import "components/horizontal-nav";
@import "components/links";
@import "components/service-banner";
@import "components/service-nav";
@import "components/side";
@import "components/side-nav";
@import "components/summary-list";

.unbranded {
	background-color: govuk-functional-colour('surface-background');

	.govuk-main-wrapper {
		background-color: govuk-functional-colour('body-background');
		padding: 30px 30px 0;
	}
}

html {
	// HODS is applying a backgroud as important to the html, override it
	background: govuk-functional-colour('template-background') !important;
}

.hods-page__body {
	// Move the background declaration here to stop it looking rubbish on short pages
	// Don't use the page class at all as it's buggy and uses !important rules
	background: #F5F5F5;
}

// Override any MOJ or Home Office components using Transport
[class^="moj-"],
[class^="hods-"] {
	font-family: inherit;
}

.govuk-radios__label,
.govuk-checkboxes__label
 {
	&::before {
		background: govuk-colour("white");
	}
}

// Prototype options banner
.app-notification-banner--prototype-options {
	background-color: govuk-colour("purple");
	border: 5px solid govuk-colour("purple");
	@include govuk-responsive-margin(9, "top");

	#js-dismiss {
		float: right;
		&:link,
		&:hover,
		&:visited {
			color: govuk-colour("white");
		}
	}

	a { @extend .govuk-link--no-visited-state; }
}

